# IG_UGR

Practicas/: ruta trabajo.txt
Practicas/plantilla/cmake-unix/: CMakeLists.txt  leeme.txt
Practicas/plantilla/include/: animacion.h  array-verts.h  camara.h  escena.h  grafo-escena.h  malla-ind.h  malla-revol.h  materiales-luces.h  objeto3d.h  practicas.h  seleccion.h
Practicas/plantilla/make-unix/: leeme.txt  makefile
Practicas/plantilla/src/: animacion.cpp  array-verts.cpp  camara.cpp  escena.cpp  grafo-escena.cpp  main.cpp  malla-ind.cpp  malla-revol.cpp  materiales-luces.cpp  objeto3d.cpp  seleccion.cpp
Practicas/recursos/include/: cauce.h  fbo.h  ig-aux.h  lector-jpg.h  lector-ply.h  matrices-tr.h  matrizg_impl.h  renom.sh  tuplasg.h
Practicas/recursos/make/: include-cmake-unix.txt  include-make-unix.make
Practicas/recursos/packages-win/libjpeg.9.2.0.1/: .signature.p7s
Practicas/recursos/packages-win/libjpeg.redist.9.2.0.1/: .signature.p7s  libjpeg.redist.9.2.0.1.nupkg
Practicas/recursos/shaders/: cauce21-frag.glsl  cauce21-vert.glsl
Practicas/recursos/src/: cauce.cpp  fbo.cpp  ig-aux.cpp  lector-jpg.cpp  lector-ply.cpp  matrices-tr.cpp
Practicas/trabajo/cmake-win/: CMakeLists.txt  CMakeSettings.json  leeme.txt
Practicas/trabajo/include/: animacion.h  array-verts.h  camara.h  escena.h  exp4.h  grafo-escena.h  latapeones.h  malla-ind.h  malla-revol.h  materiales-luces.h  modelo-jer.h  objeto3d.h  practicas.h  seleccion.h
Practicas/trabajo/src/: animacion.cpp  array-verts.cpp  camara.cpp  escena.cpp  grafo-escena.cpp  latapeones.cpp  main.cpp  malla-ind.cpp  malla-revol.cpp  materiales-luces.cpp  modelo-jer.cpp  objeto3d.cpp  seleccion.cpp
